# ubuntuQtOfCmakeBuild

./: CMakeLists.txt  README.md
